--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
+    "react-easy-crop": "^5.4.1",
     "react-grid-layout": "^1.5.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
