--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^8.12.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
